# genz-telugu-

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
examples/: calculator.gzt  conditionals.gzt  fibonacci.gzt  guess_game.gzt  hello.gzt  list_ops.gzt  loops.gzt
genztelugu/: __init__.py  __main__.py  errors.py  keywords.py  runtime.py  translator.py  utils.py
src/: App.tsx  index.css
src/components/: CodeEditor.tsx  KeywordReference.tsx  Navbar.tsx  OutputConsole.tsx  PyodideStatusBar.tsx  PythonPreview.tsx  Toolbar.tsx
src/data/: examples.ts
src/hooks/: useKeyboardShortcuts.ts  useSharedCode.ts
src/pages/: ExamplesPage.tsx  HomePage.tsx  PlaygroundPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
src/runtime/: pyodide.ts
src/services/: storage.ts
src/store/: useStore.ts
src/translator/: translator.test.ts  translator.ts
src/types/: index.ts
src/utils/: errorTranslator.ts  share.ts
tests/: test_runtime.py  test_translator.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/snippets/: genztelugu.code-snippets
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: genztelugu.tmLanguage.json
